@@ -1,3 +1,12 @@
+2002-03-01  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
+	* gc.c (SCM_HEAP_SEG_SIZE, CELL_UP, CELL_DN, DOUBLECELL_ALIGNED_P,
+	NEXT_DATA_CELL, init_heap_seg, alloc_some_heap), gc.h (struct
+	scm_cell, struct scm_t_cell, SCM_CELLPTR, SCM_GC_CARD_SIZE,
+	SCM_GC_IN_CARD_HEADERP), tags.h (SCM_CELLP):  Renamed the struct
+	scm_cell and all its uses to scm_t_cell in accordance to Guile's
+	naming scheme for types.  The type name scm_cell is deprecated.
+
 2002-02-26  Thien-Thi Nguyen  <ttn@giblet.glug.org>
 
 	* Makefile.am: Update path to pre-inst-guile automake frag.
